Support JDK 11/17 test out of box.